--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,8 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 #mybatis.config-location= classpath:mybatis.configration.mybatis-config.xml
 logging.level.com.example.mybatisplus.demo=debug
 mybatis.configuration.log-impl=org.apache.ibatis.logging.log4j2.Log4j2Impl
+logging.level.com.sxsms.mapper=debug
+
 # pagehelper properties
 pagehelper.offsetAsPageNum=true
 pagehelper.rowBoundsWithCount=true
